--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vue-tsc": "^1.8.27",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "vue-tsc": "^1.8.27"
   }
 }
